Add CheckboxValue